--- a/clemson.html
+++ b/clemson.html
@@ -8,8 +8,10 @@
          <div class = "container">
         	<h1>Clemson University</h1>
 		<p>
-			Clemson University is a selective, public, research university in a college-town setting. Clemson's desire is to attract a capable, dedicated and diverse student body of approximately 24,000 undergraduate and graduate students, with priority to students from South Carolina.		
-    </p>
+		Clemson University is a selective, public, research university in a college-town setting. Clemson's desire is to attract a capable, dedicated and diverse student body of approximately 24,000 undergraduate and graduate students, with priority to students from South Carolina.		
+    		</p>
+		<br>
+		<img src = "https://bloximages.newyork1.vip.townnews.com/foxcarolina.com/content/tncms/assets/v3/editorial/0/72/072b20c2-b6c2-11e8-939f-e37389cfe096/5b99690e9a8d6.image.png?resize=400%2C225" width = "370px" height = "220px">
 		<br>
       <table border="1">
             <tr>
