--- a/princeton.html
+++ b/princeton.html
@@ -8,9 +8,10 @@
          <div class = "container">
         	<h1>Princeton University</h1>
 		<p>
-			Chartered in 1746, Princeton is the fourth-oldest college in the United States. Princeton is an independent, coeducational, nondenominational institution that provides undergraduate and graduate instruction in the arts and humanities, social sciences, natural sciences, and engineering.
-    </p>
+		Chartered in 1746, Princeton is the fourth-oldest college in the United States. Princeton is an independent, coeducational, nondenominational institution that provides undergraduate and graduate instruction in the arts and humanities, social sciences, natural sciences, and engineering.
+   		</p>
 		<br>
+		<img src = "https://upload.wikimedia.org/wikipedia/en/thumb/f/f0/Princeton_Univ_seal.svg/1200px-Princeton_Univ_seal.svg.png" width = "370px" height = "220px">
     <p>Location: New Jersey</p>
     <br>
     <p>Type of College: Private, Ivy League Research University</p>
@@ -25,7 +26,7 @@
         <li>Social Service Professions</li>
       </ul>
     </p>   
-		<br>
+    <br>
     <p>Average GPA: 3.9</p>
     <br>
     <p>Undergraduate Enrollment: 5,422 students</p>
